Aufnahme von Meetup

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <ul>
         <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
         <li><a href="https://www.xing.com/net/designthinking-muc/">Xing</a></li>
+        <li><a href="">Meetup</a>http://www.meetup.com/de-DE/DT-Muc/</li>
         <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
         <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
         <li><a href="mailto:info@dt-muc.de">Email</a></li>
