--- a/index.html
+++ b/index.html
@@ -19,36 +19,34 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 13. Oktober</span> 2016<br>
-      <span class="important-info">Dr. Juergen Erbeldinger<br></span>
-      Registrieren: <a href="https://www.xing.com/events/13-10-arbeitswelt-zukunft-design-thinking-munchen-1733730">Xing</a> oder <a href="https://www.meetup.com/de-DE/DT-Muc/events/234534343/">Meetup</a>
+      <span class="important-info">19 Uhr, 29. November</span> 2016<br>
+      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: coming soon
     </div>
   </section>
 
   <section id="description">
 
+    <p class="title">
+      Join Us
+    </p>
+
     <p class="talk-title">
-      Arbeitswelt der Zukunft
+      Stammtisch
     </p>
 
     <p>
-      Juergen Erbeldinger, CEO bei Partake
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
     </p>
 
     <p>
-      Wie Design Thinking und weitere agile Managementmethoden unsere Arbeit beeinflussen und verändern. Durch Perspektivenwechsel werden Innovationen vorangetrieben, neue Erlebnisse generiert und Wettbewerbsvorteile ermöglicht.
+      Wir werden uns um 19 Uhr am 12. Juni 2016 bei <a href="http://www.ocui.de">ocui</a> treffen.
     </p>
 
     <p>
-      Dr. Juergen Erbeldinger ist Gründer und CEO von Partake. Er ist seit vielen Jahren als Vor- und Querdenker gefragt und hat in den letzten Jahren die Ideen des Design Thinking weiterentwickelt. Juergen Erbeldinger fordert Gründer und Unternehmen auf, vor allem auf Kundenerlebnis und Innovation zu setzen, um auf disruptiven Märkten zu überleben.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 13. Oktober 2016 in den Räumen von <a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a> treffen.
-    </p>
-
-    <p>
-      Für Getränke und Essen ist gesorgt.
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
     </p>
 
     <p class="title">
