--- a/index.html
+++ b/index.html
@@ -19,35 +19,13 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 29. November</span> 2016<br>
-      <span class="important-info">Stammtisch<br></span>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/235741496/">Meetup</a> oder <a href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1752056">Xing</a>
+      <span class="important-info">Winterpause</span><br>
+      bis Ende Dezember, 2016<br>
+      Wir melden uns<br>im Januar 2016<br>wieder!
     </div>
   </section>
 
   <section id="description">
-
-    <p class="title">
-      Join Us
-    </p>
-
-    <p class="talk-title">
-      Stammtisch
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 29. November 2016 bei <a href="http://www.ocui.de">ocui</a> treffen.
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
 
     <p class="title">
       Hello, World!
