Add stammtisch for jan 2017

--- a/index.html
+++ b/index.html
@@ -19,12 +19,35 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Winterpause</span><br>
-      Wir melden uns<br>im Januar 2017<br>wieder!
+      <span class="important-info">19 Uhr, 19. Januar</span> 2017<br>
+      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: TBA
     </div>
   </section>
 
   <section id="description">
+
+    <p class="title">
+      Join Us
+    </p>
+
+    <p class="talk-title">
+      Stammtisch
+    </p>
+
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 19. Januar 2017 bei <a href="http://www.ocui.de">ocui</a> treffen.
+    </p>
+
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
 
     <p class="title">
       Hello, World!
