--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span class="important-info">Stammtisch<br></span>
       <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
       <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: TBA
+      Registrieren: <a href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1768421">XING</a> oder <a href="https://www.meetup.com/DT-Muc/events/236823022/">Meetup</a>
     </div>
   </section>
 
