--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 19. Januar</span> 2017<br>
-      <span class="important-info">Stammtisch<br></span>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1768421">XING</a> oder <a href="https://www.meetup.com/DT-Muc/events/236823022/">Meetup</a>
+      <span class="important-info">18:30 Uhr, 16. Februar 2017<br></span> 
+      <span class="important-info">Vortrag + Workshop<br></span>
+      <span class="important-info"><a href="">tbd</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.xing.com/communities/posts/design-thinking-muenchen-1012589558">XING</a> oder 
+                    <a href="https://www.meetup.com/de-DE/DT-Muc/events/237263058/">Meetup</a>
     </div>
   </section>
 
@@ -34,19 +35,18 @@
     </p>
 
     <p class="talk-title">
-      Stammtisch
+      Design Thinking für Einsteiger
     </p>
 
     <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
+      Aktuell ist der Begriff „Design Thinking“ häufig zu hören, zunehmend auch in Deutschland. Da wir als Organisatoren von Design Thinking München häufiger gerade von neuen Mitgliedern in der Gruppe gefragt wurden, was Design Thinking eigentlich ist, wollen wir diesmal einen Treffen mit genau diesem Fokus anbieten: Einführung in Design Thinking.   
 
-    <p>
-      Wir werden uns um 19 Uhr am 19. Januar 2017 bei <a href="http://www.ocui.de">ocui</a> treffen.
-    </p>
+In aller Kürze: eine mögliche Definition von Design Thinking ist wie folgt:
+„Design thinking is a human-centered approach to innovation that draws from the designer's toolkit to integrate the needs of people, the possibilities of technology, and the requirements for business success.” —Tim Brown, IDEO
 
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+Wir werden in dem Meetup Design Thinking durch einen kurzen Vortrag (ca. 1/2 Stunde) von Gerhard Müller und Tae Won Ha (beide TNG) vorstellen und dann (denn so versteht man Design Thinking am besten) durch einen Workshop, geleitet von Steffi Kieffer (revelate) alle selbst „erleben“.
+
+Für Essen &amp; Trinken ist gesorgt: wir starten um 18:30 Uhr mit Pizza und Getränken, starten um 19:00 Uhr mit dem Vortrag und arbeiten dann bis ca. 21:00 Uhr an der „Design Challenge“.
     </p>
 
     <p class="title">
