--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
     <p>
       Aktuell ist der Begriff „Design Thinking“ häufig zu hören, zunehmend auch in Deutschland. Da wir als Organisatoren von Design Thinking München häufiger gerade von neuen Mitgliedern in der Gruppe gefragt wurden, was Design Thinking eigentlich ist, wollen wir diesmal einen Treffen mit genau diesem Fokus anbieten: Einführung in Design Thinking.   
-
-In aller Kürze: eine mögliche Definition von Design Thinking ist wie folgt:
+<br/><br/>
+In aller Kürze: eine mögliche Definition von Design Thinking ist wie folgt:<br/>
 „Design thinking is a human-centered approach to innovation that draws from the designer's toolkit to integrate the needs of people, the possibilities of technology, and the requirements for business success.” —Tim Brown, IDEO
-
+<br/><br/>
 Wir werden in dem Meetup Design Thinking durch einen kurzen Vortrag (ca. 1/2 Stunde) von Gerhard Müller und Tae Won Ha (beide TNG) vorstellen und dann (denn so versteht man Design Thinking am besten) durch einen Workshop, geleitet von Steffi Kieffer (revelate) alle selbst „erleben“.
-
+<br/>
 Für Essen &amp; Trinken ist gesorgt: wir starten um 18:30 Uhr mit Pizza und Getränken, starten um 19:00 Uhr mit dem Vortrag und arbeiten dann bis ca. 21:00 Uhr an der „Design Challenge“.
     </p>
 
