--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">18:30 Uhr, 16. Februar 2017<br></span> 
-      <span class="important-info">Vortrag + Workshop<br></span>
-      <span class="important-info"><a href="https://goo.gl/maps/qLaCE7mPHdr">Payback</a></span>
-      <a class="icon-link" href="https://goo.gl/maps/qLaCE7mPHdr"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.xing.com/communities/posts/design-thinking-muenchen-1012589558">XING</a> oder 
-                    <a href="https://www.meetup.com/de-DE/DT-Muc/events/237263058/">Meetup</a>
+      <span class="important-info">19:00 Uhr, 16. März 2017<br></span>
+      <span class="important-info">Christiane Riefler, BMW<br></span>
+      <span class="important-info">Vortrag<br></span>
+      <!--<span class="important-info">TBA</span><br>-->
+      <!--<a class="icon-link" href="https://goo.gl/maps/qLaCE7mPHdr"><i class="fa fa-map-marker"></i></a><br>-->
+      Registrieren: TBA
     </div>
   </section>
 
@@ -35,19 +35,20 @@
     </p>
 
     <p class="talk-title">
-      Design Thinking für Einsteiger
+      Typisch Deutsch – Design Thinking in Deutschland clash of cultures?
     </p>
 
     <p>
-      Aktuell ist der Begriff „Design Thinking“ häufig zu hören, zunehmend auch in Deutschland. Da wir als Organisatoren von Design Thinking München häufiger gerade von neuen Mitgliedern in der Gruppe gefragt wurden, was Design Thinking eigentlich ist, wollen wir diesmal einen Treffen mit genau diesem Fokus anbieten: Einführung in Design Thinking.   
-    </p><p>
-In aller Kürze: eine mögliche Definition von Design Thinking ist wie folgt:<br/>
-„Design thinking is a human-centered approach to innovation that draws from the designer's toolkit to integrate the needs of people, the possibilities of technology, and the requirements for business success.” —Tim Brown, IDEO
-    </p><p>
-Wir werden in dem Meetup Design Thinking durch einen kurzen Vortrag (ca. 1/2 Stunde) von Gerhard Müller und Tae Won Ha (beide TNG) vorstellen und dann (denn so versteht man Design Thinking am besten) durch einen Workshop, geleitet von Steffi Kieffer (revelate) alle selbst „erleben“.
-    </p><p>
-    Wir treffen uns in den Räumen von <a href="http://payback.de">Payback</a>: <a href="https://goo.gl/maps/qLaCE7mPHdr">Theresienhöhe 12, 80339 München</a>.  
-    Für Essen &amp; Trinken ist gesorgt: wir starten um 18:30 Uhr mit Pizza und Getränken, starten um 19:00 Uhr mit dem Vortrag und arbeiten dann bis ca. 21:00 Uhr an der „Design Challenge“.
+      WAS: Eine kritische Auseinandersetzung mit der Deutschen Arbeitskultur und deren Eigenheiten und welchen Stellenwert Design Thinking hier gefunden hat.
+    </p>
+    <p>
+      ZIEL: Denkanstoss was der etwas verspätete Design Thinking Boom in Deutschland für Chancen aber auch Risiken birgt.
+    </p>
+    <p>
+      MOTIVATION: Die Session soll keine schwarz/ weiss Darstellung sein und hat keinen Anspruch auf Richtigkeit oder Vollständigkeit. Vielmehr ist das Ziel eine konstruktive Diskussion anzuregen um für die Zukunft ein breiteres Verständnis für die Wirkungskraft von Design Thinking in Deutschland zu erlangen und mögliche Wege dahin gemeinsam zu diskutieren.
+    </p>
+    <p>
+      Wir werden uns um 19 Uhr am 16. März 2017 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
     <p class="title">
