add location (autoscout24)

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <div id="next-meetup">
       <span class="important-info">19:00 Uhr, 16. März 2017<br></span>
       <span class="important-info">Christiane Riefler, BMW<br></span>
-      <span class="important-info">Vortrag<br></span>
-      <!--<span class="important-info">TBA</span><br>-->
-      <!--<a class="icon-link" href="https://goo.gl/maps/qLaCE7mPHdr"><i class="fa fa-map-marker"></i></a><br>-->
-      Registrieren: TBA
+      <span class="important-info"><a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a></span>
+      <a class="icon-link" href="https://goo.gl/maps/GopCR1UAAaT2"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.xing.com/events/16-03-design-thinking-deutschland-clash-of-cultures-1791736">Xing</a> oder <a href="https://www.meetup.com/DT-Muc/events/238237529/">Meetup</a>
     </div>
   </section>
 
@@ -48,7 +47,10 @@
       MOTIVATION: Die Session soll keine schwarz/ weiss Darstellung sein und hat keinen Anspruch auf Richtigkeit oder Vollständigkeit. Vielmehr ist das Ziel eine konstruktive Diskussion anzuregen um für die Zukunft ein breiteres Verständnis für die Wirkungskraft von Design Thinking in Deutschland zu erlangen und mögliche Wege dahin gemeinsam zu diskutieren.
     </p>
     <p>
-      Wir werden uns um 19 Uhr am 16. März 2017 treffen. Der Ort wird bald bekannt gegeben.
+      Wir werden uns um 19 Uhr am 16. März 2017 in den Räumen von <a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a> treffen.
+    </p>
+    <p>
+      Für Getränke und Essen ist gesorgt.
     </p>
 
     <p class="title">
