add next stammtisch

--- a/index.html
+++ b/index.html
@@ -19,39 +19,35 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19:00 Uhr, 25. April</span> 2017<br>
-      <span class="important-info">TBA<br></span>
-      <!--<span class="important-info"><a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a></span>-->
-      <!--<a class="icon-link" href="https://goo.gl/maps/GopCR1UAAaT2"><i class="fa fa-map-marker"></i></a><br>-->
-      <!--Registrieren: <a href="https://www.xing.com/events/16-03-design-thinking-deutschland-clash-of-cultures-1791736">Xing</a> oder <a href="https://www.meetup.com/DT-Muc/events/238237529/">Meetup</a>-->
+      <span class="important-info">19 Uhr, 25. April</span> 2017<br>
+      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: TBA
     </div>
   </section>
 
   <section id="description">
 
-    <!--<p class="title">-->
-      <!--Join Us-->
-    <!--</p>-->
+    <p class="title">
+      Join Us
+    </p>
 
-    <!--<p class="talk-title">-->
-      <!--Typisch Deutsch – Design Thinking in Deutschland clash of cultures?-->
-    <!--</p>-->
+    <p class="talk-title">
+      Stammtisch
+    </p>
 
-    <!--<p>-->
-      <!--WAS: Eine kritische Auseinandersetzung mit der Deutschen Arbeitskultur und deren Eigenheiten und welchen Stellenwert Design Thinking hier gefunden hat.-->
-    <!--</p>-->
-    <!--<p>-->
-      <!--ZIEL: Denkanstoss was der etwas verspätete Design Thinking Boom in Deutschland für Chancen aber auch Risiken birgt.-->
-    <!--</p>-->
-    <!--<p>-->
-      <!--MOTIVATION: Die Session soll keine schwarz/ weiss Darstellung sein und hat keinen Anspruch auf Richtigkeit oder Vollständigkeit. Vielmehr ist das Ziel eine konstruktive Diskussion anzuregen um für die Zukunft ein breiteres Verständnis für die Wirkungskraft von Design Thinking in Deutschland zu erlangen und mögliche Wege dahin gemeinsam zu diskutieren.-->
-    <!--</p>-->
-    <!--<p>-->
-      <!--Wir werden uns um 19 Uhr am 16. März 2017 in den Räumen von <a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a> treffen.-->
-    <!--</p>-->
-    <!--<p>-->
-      <!--Für Getränke und Essen ist gesorgt.-->
-    <!--</p>-->
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 25. April 2017 bei <a href="http://www.ocui.de">ocui</a> treffen.
+    </p>
+
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
 
     <p class="title">
       Hello, World!
