--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 18. Mai</span> 2017<br>
-      <span class="important-info">Innovativ durch Co-Creation<br></span>
-      <span class="important-info">Oliver Fischer</span>, Fiducia GAD<br>
-      <span class="important-info"><a href="https://goo.gl/maps/eGRM98K8eHs">Fiducia GAD</a></span>
-      <a class="icon-link" href="https://goo.gl/maps/eGRM98K8eHs"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.xing.com/events/18-05-innovativ-co-creation-design-thinking-munchen-1813527">Xing</a> oder <a href="https://www.meetup.com/DT-Muc/events/239666708">Meetup</a>
+      <span class="important-info">19 Uhr, 22. Juni</span> 2017<br>
+      <span class="important-info">TBA</span>
+      <!--<span class="important-info"><a href="https://goo.gl/maps/eGRM98K8eHs">Fiducia GAD</a></span>-->
+      <!--<a class="icon-link" href="https://goo.gl/maps/eGRM98K8eHs"><i class="fa fa-map-marker"></i></a><br>-->
+      <!--Registrieren: <a href="https://www.xing.com/events/18-05-innovativ-co-creation-design-thinking-munchen-1813527">Xing</a> oder <a href="https://www.meetup.com/DT-Muc/events/239666708">Meetup</a>-->
     </div>
   </section>
 
@@ -34,25 +33,25 @@
       Join Us
     </p>
 
-    <p class="talk-title">
-      Innovativ durch Co-Creation
-    </p>
+    <!--<p class="talk-title">-->
+      <!--Innovativ durch Co-Creation-->
+    <!--</p>-->
 
-    <p>
-      <b>Oliver Fischer</b>, Fiducia GAD
-    </p>
+    <!--<p>-->
+      <!--<b>Oliver Fischer</b>, Fiducia GAD-->
+    <!--</p>-->
 
-    <p>
-      Erfolgreiche Innovationen entstehen in der Regel nicht durch geniale Einzelkämpfer sondern werden heute durch frühzeitigen Einbezug von Partnern und Kunden in co-kreativen Arbeitsformen entwickelt. Oliver Fischer zeigt in seinem Vortrag, welche Zutaten für die Innovationsarbeit noch notwendig sind und wie die Fiducia & GAD diese bei der Entwicklung innovativer Produkte einsetzt.
-    </p>
+    <!--<p>-->
+      <!--Erfolgreiche Innovationen entstehen in der Regel nicht durch geniale Einzelkämpfer sondern werden heute durch frühzeitigen Einbezug von Partnern und Kunden in co-kreativen Arbeitsformen entwickelt. Oliver Fischer zeigt in seinem Vortrag, welche Zutaten für die Innovationsarbeit noch notwendig sind und wie die Fiducia & GAD diese bei der Entwicklung innovativer Produkte einsetzt.-->
+    <!--</p>-->
 
-    <p>
-      Wir werden uns um 19 Uhr am 18. Mai 2017 bei <a href="https://www.fiduciagad.de/startseite.html">Fiducia GAD</a> treffen.
-    </p>
+    <!--<p>-->
+      <!--Wir werden uns um 19 Uhr am 18. Mai 2017 bei <a href="https://www.fiduciagad.de/startseite.html">Fiducia GAD</a> treffen.-->
+    <!--</p>-->
 
-    <p>
-      Für Getränke und Essen ist gesorgt.
-    </p>>
+    <!--<p>-->
+      <!--Für Getränke und Essen ist gesorgt.-->
+    <!--</p>>-->
 
     <p class="title">
       Hello, World!
