--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 22. Juni</span> 2017<br>
-      <span class="important-info">Build your Lean Startup<br>with Design Thinking<br></span>
+      <span class="important-info">18:30 Uhr, 20. Juli</span> 2017<br>
+      <span class="important-info">Stammtisch<br></span>
+      <!--
       <span class="important-info">Steffi Kieffer<br>Thomas Hartmann</span><br>
-      <span><a href="https://goo.gl/maps/4uZhY67eqvj">LV 1871</a></span>
-      <a class="icon-link" href="https://goo.gl/maps/4uZhY67eqvj"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.xing.com/events/build-your-lean-startup-with-design-thinking-1827799">Xing</a> oder <a href="https://www.meetup.com/DT-Muc/events/240764548/">Meetup</a>
+-->
+      <span><a href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731">Wirtshaus im Braunauer Hof</a></span>
+      <a class="icon-link" href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.xing.com/events/20-07-design-thinking-munchen-stammtisch-1836763">Xing</a> oder <a href="https://www.meetup.com/de-DE/DT-Muc/events/241678597/?eventId=241678597">Meetup</a>
     </div>
   </section>
 
@@ -35,9 +37,14 @@
     </p>
 
     <p class="talk-title">
-      Build your Lean Startup with Design Thinking
+      Socializing und Austausch über Design Thinking
     </p>
-
+    
+    <p>
+      Wir sind gemütlich im Biergarten und tauschen uns aus zu Themen im Umfeld von Design Thinking und generell Innovation.
+      Die Plätze sind reserviert auf "Design Thinking München" bzw. "Gerhard Müller"
+    </p>
+<!--
     <p>
       <b>Steffi Kieffer</b>, Revelate und <b>Thomas Hartmann</b>, str84wd Products
     </p>
@@ -48,8 +55,8 @@
 
     <p>
       Für Getränke und Essen ist gesorgt.
-    </p>>
-
+    </p>
+-->
     <p class="title">
       Hello, World!
     </p>
