--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">18:30 Uhr, 20. Juli</span> 2017<br>
-      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info">Sommerpause</span><br>
+      Wir melden uns<br>Anfang September wieder!
       <!--
       <span class="important-info">Steffi Kieffer<br>Thomas Hartmann</span><br>
 -->
-      <span><a href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731">Wirtshaus im Braunauer Hof</a></span>
+      <!--<span><a href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731">Wirtshaus im Braunauer Hof</a></span>
       <a class="icon-link" href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731"><i class="fa fa-map-marker"></i></a><br>
       Registrieren: <a href="https://www.xing.com/events/20-07-design-thinking-munchen-stammtisch-1836763">Xing</a> oder <a href="https://www.meetup.com/de-DE/DT-Muc/events/241678597/?eventId=241678597">Meetup</a>
+      -->
     </div>
   </section>
 
   <section id="description">
 
+<!--
     <p class="title">
       Join Us
     </p>
@@ -44,7 +46,6 @@
       Wir sind gemütlich im Biergarten und tauschen uns aus zu Themen im Umfeld von Design Thinking und generell Innovation.
       Die Plätze sind reserviert auf "Design Thinking München" bzw. "Gerhard Müller"
     </p>
-<!--
     <p>
       <b>Steffi Kieffer</b>, Revelate und <b>Thomas Hartmann</b>, str84wd Products
     </p>
