--- a/index.html
+++ b/index.html
@@ -19,45 +19,38 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Sommerpause</span><br>
-      Wir melden uns<br>Anfang September wieder!
-      <!--
-      <span class="important-info">Steffi Kieffer<br>Thomas Hartmann</span><br>
--->
-      <!--<span><a href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731">Wirtshaus im Braunauer Hof</a></span>
-      <a class="icon-link" href="https://www.google.com/maps/search/Wirtshaus%20im%20Braunauer%20Hof+Frauenstra%C3%9Fe%2040%20%2080469%20M%C3%BCnchen%20Deutschland/@48.1286,11.5731"><i class="fa fa-map-marker"></i></a><br>
-      Registrieren: <a href="https://www.xing.com/events/20-07-design-thinking-munchen-stammtisch-1836763">Xing</a> oder <a href="https://www.meetup.com/de-DE/DT-Muc/events/241678597/?eventId=241678597">Meetup</a>
-      -->
+      <span class="important-info">Intro to Design Thinking</span><br>
+      <span class="important-info">7pm, 19. October</span> 2017<br>
+      <span><a href="https://goo.gl/maps/34DermJTVXK2">TNG Technology Consulting</a></span>
+      <a class="icon-link" href="https://goo.gl/maps/34DermJTVXK2"><i class="fa fa-map-marker"></i></a><br>
+      Register: <a href="https://www.meetup.com/DT-Muc/events/243947671/">Meetup</a> oder <a href="https://www.xing.com/events/19-10-intro-to-design-thinking-design-thinking-munchen-1866530">Xing</a>
     </div>
   </section>
 
   <section id="description">
 
-<!--
     <p class="title">
       Join Us
     </p>
 
     <p class="talk-title">
-      Socializing und Austausch über Design Thinking
-    </p>
-    
-    <p>
-      Wir sind gemütlich im Biergarten und tauschen uns aus zu Themen im Umfeld von Design Thinking und generell Innovation.
-      Die Plätze sind reserviert auf "Design Thinking München" bzw. "Gerhard Müller"
-    </p>
-    <p>
-      <b>Steffi Kieffer</b>, Revelate und <b>Thomas Hartmann</b>, str84wd Products
+      Intro to Design Thinking
     </p>
 
     <p>
-      TBD
+      „Design thinking is a human-centered approach to innovation that draws from the designer's toolkit to integrate the needs of people, the possibilities of technology, and the requirements for business success.” —Tim Brown, IDEO
+    </p>
+    <p>
+      During this session we will first give a short theoretical overview of Design Thinking, as well as talk about the challenges and opportunities of actually "applying" Design Thinking.
+    </p>
+    <p>
+      The second part of the evening is all about the Design Thinking mindset (being human centered, bias towards action, culture of prototyping, show don’t tell, and radical collaboration). In an interactive workshop we will go through the Design Thinking phases to tackle a new design challenge.
     </p>
 
     <p>
-      Für Getränke und Essen ist gesorgt.
+        Pizza and drinks will be there!
     </p>
--->
+
     <p class="title">
       Hello, World!
     </p>
