--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Intro to Design Thinking</span><br>
-      <span class="important-info">6:30pm, 19. October</span> 2017<br>
-      <span><a href="https://goo.gl/maps/34DermJTVXK2">TNG Technology Consulting</a></span>
-      <a class="icon-link" href="https://goo.gl/maps/34DermJTVXK2"><i class="fa fa-map-marker"></i></a><br>
-      Register: <a href="https://www.meetup.com/DT-Muc/events/243947671/">Meetup</a> oder <a href="https://www.xing.com/events/19-10-intro-to-design-thinking-design-thinking-munchen-1866530">Xing</a>
+      Panel Discussion<br>
+      <span class="important-info">The Future Role of Design</span><br>
+      <span class="important-info">7pm, 16. Nov. 2017</span> 2017<br>
+      <span><a href="https://www.google.com/maps/search/?api=1&query=Ganghoferstra%C3%9Fe+68b%2C+Munich%2C+de">IXDS GmbH</a></span>
+      <a class="icon-link" href="https://www.google.com/maps/search/?api=1&query=Ganghoferstra%C3%9Fe+68b%2C+Munich%2C+de"><i class="fa fa-map-marker"></i></a><br>
+      Register: <a href="https://www.eventbrite.co.uk/e/after-work-talk-the-future-role-of-design-tickets-39648782576">Eventbrite</a></a>
     </div>
   </section>
 
@@ -34,22 +35,23 @@
     </p>
 
     <p class="talk-title">
-      Intro to Design Thinking
+      The Future Role of Design
     </p>
 
     <p>
-      „Design thinking is a human-centered approach to innovation that draws from the designer's toolkit to integrate the needs of people, the possibilities of technology, and the requirements for business success.” —Tim Brown, IDEO
-    </p>
-    <p>
-      During this session we will first give a short theoretical overview of Design Thinking, as well as talk about the challenges and opportunities of actually "applying" Design Thinking.
-    </p>
-    <p>
-      The second part of the evening is all about the Design Thinking mindset (being human centered, bias towards action, culture of prototyping, show don’t tell, and radical collaboration). In an interactive workshop we will go through the Design Thinking phases to tackle a new design challenge.
-    </p>
+    In a world of disruptive technologies, changing user behavior, and a shift in economic and political tides, whatever the sector you’re in, good design is becoming more important than ever! Industries that are already being disrupted are likely to be disrupted again, calling for quick, innovative solutions that are far beyond business-as-usual.
 
     <p>
-        Pizza and drinks will be there!
-    </p>
+    On Thursday, November 16, design studio IXDS (https://www.ixds.com/) is partnering with Design Thinking München (https://www.meetup.com/DT-Muc/) to bring together their communities for a panel discussion and open dialogue around how the future of business and the role of design intersect. Join us for this special After-Work Talk, and share your thoughts over a beer, pizza and snacks at the lovely IXDS Munich studio.
+
+    <p>
+    Join us to explore how companies, innovators, and the creative community are rethinking the role of design in modern business. Each panelist will bring unique insight from their area of focus – we'll have all bases covered as we look at the various industry challenges and opportunities that lie ahead.
+
+    <p>
+    A special thanks to <a href="http://tngtech.com">TNG Technology Consulting</a> who are be sponsoring the evening with us to ensure we have all the food & drinks we need to fuel us through a fun, informative evening.
+
+    <p>
+    Looking forward to seeing you there!
 
     <p class="title">
       Hello, World!
