--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     </div>
 
     <div id="next-meetup">
-      Panel Discussion<br>
-      <span class="important-info">The Future Role of Design</span><br>
-      <span class="important-info">7pm, 16. Nov. 2017</span> 2017<br>
-      <span><a href="https://www.google.com/maps/search/?api=1&query=Ganghoferstra%C3%9Fe+68b%2C+Munich%2C+de">IXDS GmbH</a></span>
-      <a class="icon-link" href="https://www.google.com/maps/search/?api=1&query=Ganghoferstra%C3%9Fe+68b%2C+Munich%2C+de"><i class="fa fa-map-marker"></i></a><br>
-      Register: <a href="https://www.eventbrite.co.uk/e/after-work-talk-the-future-role-of-design-tickets-39648782576">Eventbrite</a></a>
+      <span class="important-info">DT in B2B - Beispiele von Siemens</span><br>
+      <span class="important-info">7pm, 09. Jan. 2018</span><br>
+      <span><a href="https://www.google.com/maps/search/Steelcase%20AG+Brienner%20Stra%C3%9Fe%2042%2080333%20M%C3%BCnchen%20Germany/@48.1466,11.5624">Steelcase AG</a></span>
+      <a class="icon-link" href="https://www.google.com/maps/search/Steelcase%20AG+Brienner%20Stra%C3%9Fe%2042%2080333%20M%C3%BCnchen%20Germany/@48.1466,11.5624"><i class="fa fa-map-marker"></i></a><br>
+      Register: <a href="https://www.eventbrite.com/e/design-thinking-in-b2b-beispiele-von-siemens-tickets-41377627598">Eventbrite</a>, <a href="https://www.xing.com/events/09-01-design-thinking-b2b-beispiele-siemens-1892772?sc_o=si1942_com">Xing</ah>
     </div>
   </section>
 
@@ -35,23 +34,14 @@
     </p>
 
     <p class="talk-title">
-      The Future Role of Design
-    </p>
+      Design Thinking in B2B – Beispiele von Siemens
 
     <p>
-    In a world of disruptive technologies, changing user behavior, and a shift in economic and political tides, whatever the sector you’re in, good design is becoming more important than ever! Industries that are already being disrupted are likely to be disrupted again, calling for quick, innovative solutions that are far beyond business-as-usual.
+      <b>Dr. Bettina Maisch</b>, Senior Key Expert Consultant industrial Design Thinking<br>
+      <b>Jennifer Heier</b>, Senior Consultant industrial Design Thinking
 
     <p>
-    On Thursday, November 16, design studio IXDS (https://www.ixds.com/) is partnering with Design Thinking München (https://www.meetup.com/DT-Muc/) to bring together their communities for a panel discussion and open dialogue around how the future of business and the role of design intersect. Join us for this special After-Work Talk, and share your thoughts over a beer, pizza and snacks at the lovely IXDS Munich studio.
-
-    <p>
-    Join us to explore how companies, innovators, and the creative community are rethinking the role of design in modern business. Each panelist will bring unique insight from their area of focus – we'll have all bases covered as we look at the various industry challenges and opportunities that lie ahead.
-
-    <p>
-    A special thanks to <a href="http://tngtech.com">TNG Technology Consulting</a> who are be sponsoring the evening with us to ensure we have all the food & drinks we need to fuel us through a fun, informative evening.
-
-    <p>
-    Looking forward to seeing you there!
+      In dem Vortrag wird die Anwendung des menschen-zentrierten Entwicklungsansatzes Design Thinking in dem sehr engineurs- und technikgetriebenen B2B Unternehmen Siemens dargestellt. Seit 2012 gibt es eine dedizierte Stelle für Design Thinking innerhalb der zentralen Forschungseinrichtung des Technologieriesen. Bettina Maisch und Jennifer Heier berichten wie Design Thinking im Rahmen von B2B Projekten eingesetzt wird und wie sie mit Herausforderungen in diesem Kontext umgehen.
 
     <p class="title">
       Hello, World!
