add next stammtisch

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">DT in B2B - Beispiele von Siemens</span><br>
-      <span class="important-info">7pm, 09. Jan. 2018</span><br>
-      <span><a href="https://www.google.com/maps/search/Steelcase%20AG+Brienner%20Stra%C3%9Fe%2042%2080333%20M%C3%BCnchen%20Germany/@48.1466,11.5624">Steelcase AG</a></span>
-      <a class="icon-link" href="https://www.google.com/maps/search/Steelcase%20AG+Brienner%20Stra%C3%9Fe%2042%2080333%20M%C3%BCnchen%20Germany/@48.1466,11.5624"><i class="fa fa-map-marker"></i></a><br>
-      Register: <a href="https://www.eventbrite.com/e/design-thinking-in-b2b-beispiele-von-siemens-tickets-41377627598">Eventbrite</a>, <a href="https://www.xing.com/events/09-01-design-thinking-b2b-beispiele-siemens-1892772?sc_o=si1942_com">Xing</ah>
+      <span class="important-info">19 Uhr, 9. April</span> 2018<br>
+      <span class="important-info">Stammtisch<br></span>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      Registrieren: <a href="https://www.meetup.com/DT-Muc/events/249380310/?_cookie-check=X1YgxQdVQcR-fuIU">Meetup</a>
     </div>
   </section>
 
@@ -34,14 +34,20 @@
     </p>
 
     <p class="talk-title">
-      Design Thinking in B2B – Beispiele von Siemens
+      Stammtisch
+    </p>
 
     <p>
-      <b>Dr. Bettina Maisch</b>, Senior Key Expert Consultant industrial Design Thinking<br>
-      <b>Jennifer Heier</b>, Senior Consultant industrial Design Thinking
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
 
     <p>
-      In dem Vortrag wird die Anwendung des menschen-zentrierten Entwicklungsansatzes Design Thinking in dem sehr engineurs- und technikgetriebenen B2B Unternehmen Siemens dargestellt. Seit 2012 gibt es eine dedizierte Stelle für Design Thinking innerhalb der zentralen Forschungseinrichtung des Technologieriesen. Bettina Maisch und Jennifer Heier berichten wie Design Thinking im Rahmen von B2B Projekten eingesetzt wird und wie sie mit Herausforderungen in diesem Kontext umgehen.
+      Wir werden uns um 19 Uhr am 9. April 2018 bei <a href="http://www.ocui.de">ocui</a> treffen.
+    </p>
+
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+    </p>
 
     <p class="title">
       Hello, World!
